# qontract-validator

./: .gitignore  .pylintrc  .tool-versions  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  validate.py
.tekton/: qontract-validator-master-pull-request.yaml  qontract-validator-master-push.yaml
dockerfiles/: Dockerfile  Dockerfile.test
requirements/: requirements-dev.txt  requirements-format.txt  requirements-test.txt  requirements-type.txt
utils/: pylibyaml.py
validator/: bundle.py  bundler.py  jsonpath.py  postprocess.py  postprocess_v2.py  resourceref.py  traverse.py  utils.py  validator.py  validator_v2.py
validator/test/: conftest.py  fixtures.py  test_bundler.py  test_checksum_field.py  test_jsonpath.py  test_resourceref.py  test_traverse_data.py  test_unique.py  test_validate_bundle.py  test_validator.py
validator/test/fixtures/backref/: bundle.yml
validator/test/fixtures/bundler/: bundle.expected.yml  file-1-schema-1.yml  graphql-schema.yml  schema-1.yml
validator/test/fixtures/checksum/: checksum_field.expected.yml  checksum_field.yml  no_checksum_field.yml
validator/test/fixtures/get_schema_info_from_pointer/: complex.yml  external_ref.yml  external_ref_obj.yml  external_ref_obj_oneof.yml  object.yml  object_array.yml  object_object.yml  one_of.yml  one_of_multiple.yml
validator/test/fixtures/traverse_data/: array_field.yml  crossref_field.yml  crossref_interface_schema_field.yml  embedded_schema_ref_field.yml  missing_graphql_type_field.yml  one_of_crossref_schema_field.yml  one_of_interface_field_map_field.yml  one_of_ref_array_field_map_field.yml  one_of_ref_field_map_field.yml  simple_field.yml  simple_object_field.yml  simple_ref_field.yml
validator/test/fixtures/unique/: context_unique_crossref_array_duplicate.expected.yml  context_unique_crossref_array_duplicate.yml  context_unique_crossref_field.expected.yml  context_unique_crossref_field.yml  context_unique_ok.expected.yml  context_unique_ok.yml  context_unique_one_of_array_without_field_map.expected.yml  context_unique_one_of_array_without_field_map.yml  context_unique_ref_array_duplicate.expected.yml  context_unique_ref_array_duplicate.yml  unique_crossref_array_duplicate.expected.yml  unique_crossref_array_duplicate.yml  unique_crossref_array_duplicate_multiple_files.expected.yml  unique_crossref_array_duplicate_multiple_files.yml  unique_crossref_duplicate.expected.yml  unique_crossref_duplicate.yml  unique_crossref_not_in_array.yml  unique_duplicate.expected.yml  unique_duplicate.yml  unique_ok.expected.yml  unique_ok.yml  unique_ref_array_duplicate.expected.yml  unique_ref_array_duplicate.yml  unique_ref_array_duplicate_multiple_files.expected.yml  unique_ref_array_duplicate_multiple_files.yml  unique_ref_duplicate.expected.yml  unique_ref_duplicate.yml
validator/test/fixtures/validator/: common-1.json  duplicate_context_unique_crossref_fields.yml  duplicate_context_unique_fields.yml  duplicate_unique_fields.yml  file_schema_not_found.yml  (+22 more)
