[project]
name = "qontract-validator"
version = "0.1.0"
description = "Tools to validate and bundle datafiles for qontract-server"
authors = [
    { name = "Red Hat App-SRE Team", email = "sd-app-sre@redhat.com" },
]
license = { text = "Apache 2.0" }
requires-python = "~= 3.12.5"
dependencies = [
    "PyYAML==6.0.3",
    "jsonschema==3.2.0",
]

[project.urls]
homepage = "https://github.com/app-sre/qontract-validator"
repository = "https://github.com/app-sre/qontract-validator"
documentation = "https://github.com/app-sre/qontract-validator"

[dependency-groups]
dev = [
    "mypy==1.19.0",
    "pytest-cov==6.3.0",
    "pytest==9.0.2",
    "ruff==0.14.8",
    "types-PyYAML==6.0.12.20250915",
    "types-jsonschema==3.2.1",
]

[project.scripts]
qontract-bundler = 'validator.bundler:main'
qontract-validator = 'validator.validator:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["validator"]

[tool.hatch.build.targets.wheel]
only-include = ["validator"]

# Ruff configuration
[tool.ruff]
line-length = 88
src = ["validator"]
extend-exclude = [
    ".local",
    ".cache",
    "tmp",
]
fix = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY",     # Missing copyright header
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D107",    # Missing docstring in __init__
    "D203",    # 1 blank line required before class docstring
    "D211",    # No blank lines allowed before class docstring
    "D212",    # multi-line-summary-first-line
    "D213",    # multi-line-summary-second-line
    "D4",      # Doc string style
    "E501",    # Line too long
    "PLR0904", # Too many public methods
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0914", # Too many local variables
    "PLR0917", # Too many positional arguments
    "PLR1702", # Too many nested blocks
    "S101",    # Use of assert detected. Pytest uses assert
    "S404",    # subprocess import
    "TRY300",  # try-consider-else
    # pydoclint
    "DOC",
    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",
]

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["validator"]

# Mypy configuration
[tool.mypy]
files = ["validator"]
enable_error_code = ["truthy-bool", "redundant-expr"]
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
